--- a/configs/.config/waybar/style.css
+++ b/configs/.config/waybar/style.css
@@ -1,56 +1,34 @@
-@define-color background-color #282a36;
-@define-color text-color #f8f8f2;
-@define-color primary-color #bd93f9;
-@define-color secondary-color #ff79c6;
-@define-color warning-color #ffb86c;
-@define-color error-color #ff5555;
-@define-color sucess-color #50fA7b;
-@define-color inactive-color #6272a4;
+@define-color white rgba(255, 255, 255, 0.8);
+@define-color black rgba(0, 0, 0, 0.8);
+@define-color background rgba(0, 0, 0, 0.2);
 
 * {
     border: none;
-    font-size: 18px;
+    font-size: 16px;
     min-height: 0;
 }
 
 window#waybar {
-    background: rgba(0, 0, 0, 0.5);
-    color: @text-color;
+    background: @background;
+    color: @white;
 }
 
 #workspaces button {
-    color: @inactive-color;
-    min-width: 30px;
-    border: 2px solid transparent;
+    color: @white;
 }
 
-#workspaces button.focused,
 #workspaces button.active {
-    color: @text-color;
-    min-width: 30px;
-    background-color: @primary-color;
-    border-radius: 4px 4px 0 0;
-    transition: all 0.5s ease
-}
-
-#taskbar button {
-    box-shadow: none;
-	text-shadow: none;
-    border-radius: 0px;
+    color: @black;
+    background-color: @white;
+    transition: all .5s ease;
+    border-radius: 4px;
+    padding: 0 16px;
 }
 
 #battery {
-    font-size: 26px;
+    font-size: 24px;
 }
 
-#taskbar button.active {
-    border-radius: 4px 4px 0 0;
-    background: @primary-color;
-    transition: all 0.5s ease
-}
-
-#taskbar button:hover {
-    border-radius: 4px 4px 0 0;
-    background: @primary-color;
-    transition: all 1s ease
+#clock {
+    margin: 0 8px 0 0;
 }
