--- a/configs/.config/waybar/style.css
+++ b/configs/.config/waybar/style.css
@@ -1,80 +1,74 @@
-@define-color background #282A36;
-@define-color background2 #44475A;
-@define-color foreground #F8F8F2;
-@define-color red #800a0a;
-
 * {
   border: none;
   border-radius: 0;
-  font-family: Roboto, Helvetica, Arial, sans-serif;
+  font-family: SFMono Nerd Font;
   min-height: 0;
   font-weight: bold;
-}
-
-window#waybar {
-  font-family: Cantarell, sans-serif;
   font-size: 12px;
-  color: @foreground;
-  background: @background;
-}
-
-#workspaces {
-  font-size: 13px;
-}
-
-#workspaces button {
-  color: @background2;
-  min-width: 0;
-}
-
-#workspaces button.active {
-  color: @foreground;
-}
-
-#workspaces button.urgent {
-  background: @red;
 }
 
 #clock {
   margin: 0 8px 0 0;
 }
 
-#network.disconnected {
-  color: @red;
+#tray {
+  border-radius: 12px 0px 0px 12px;
+  background: #31363f;
+  padding: 0 16px;
 }
 
-@keyframes blink {
-  80% {
-    background-color: transparent;
-    color: #ff5a5a;
-  }
+window#waybar {
+  color: #eeeeee;
+  background: #222831;
+}
 
-  90% {
-    background-color: rgba(255, 20, 0, .4);
-    color: #dcdccc;
-  }
+#network.disconnected {
+  color: red;
 }
 
 #battery.warning:not(.charging) {
-  color: #ff5a5a;
+  color: red;
 }
 
 #battery.critical:not(.charging) {
-  color: #ff5a5a;
+  color: red;
   animation-name: blink;
   animation-duration: 5s;
   animation-timing-function: linear;
   animation-iteration-count: infinite;
 }
 
-#tray {
-  background-color: @background2;
-  border-radius: 12px 0px 0px 12px;
-  padding: 0 16px;
+#workspaces {
+  min-width: 0;
+  margin: 0 0 0 16px;
 }
 
-#clock {
-  background-color: @background2;
-  border-radius: 0px 12px 12px 0px;
-  padding: 0 16px;
+#workspaces button {
+  color: #31363f;
+  min-width: 0;
+}
+
+#workspaces button.active {
+  color: #eeeeee;
+}
+
+#workspaces button.urgent {
+  background: red;
+  color: #eeeeee;
+  animation-name: blink;
+  animation-duration: 5s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+}
+
+@keyframes blink {
+  80% {
+    background-color: transparent;
+    color: red;
+  }
+
+  90% {
+    background-color: red;
+    color: #eeeeee;
+  }
 }
